Fix body overflow and switch to using position fixed divs for links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 :root {
   font-size: 62.5%;
 }
 
-html,
 body {
   height: 100%;
   width: 100%;
   color: #f5f5f5;
   font-size: 1.6rem;
   font-family: 'Inter';
-  overflow: hidden;
-}
-
-#__next {
-  overflow: auto;
+  overflow: hidden auto;
   background-color: #111111;
-  min-height: 100%;
 }
